make partials more fine grained and sites having their own ci

--- a/partials/bottom.html
+++ b/partials/bottom.html
@@ -1,14 +1,5 @@
-<div id='metanav'>
-    <nav>
-        <ul>
-            <li><a href="/">Startseite</a></li>
-            <li><a href="/impressum">Kontakt</a></li>
-            <li><a href="/impressum">Impressum</a></li>
-            <li><a href="/disclaimer">Haftungsausschluss</a></li>
-        </ul>
-    </nav>
-</div>
-</div><!-- MAIN -->
+<!-- METANAV -->
+<!-- MAINBOTTOM -->
 <div class='clearfix'></div>
 <footer> </footer>
 
