--- a/partials/top.html
+++ b/partials/top.html
@@ -22,62 +22,6 @@
 <![endif]-->
 
 <!-- Add your site or application content here -->
-<header id='heading'>
-    <div class='clearfix'>
-
-        <nav>
-            <a id='home' href="/"><img id='logo' src='/ci/image/logo' /></a>
-        </nav>
-        <div id='slogan'>
-            <span id="firma">SoftWareEngineering Wolfgang&nbsp;Egger</span>
-            <span id="product">Enterprise WebApplications</span>
-                <span id='contact'>
-                    Bahnhofstraße 17 &bull; 12555 Berlin &bull; w.egger@framlin.com
-                </span>
-        </div>
-    </div>
-</header>
-
-<div role="main" id="main">
-    <div id='navigation'>
-        <nav id='topnav'>
-            <div class= "navrow" id="row-1">
-                <div class="navcol-1">&bull; competent</div>
-                <div class="navcol-2">
-                    <div class='cell_3 cell-1_3 fltng bright'>Analysis</div>
-                    <div class='cell_3 cell-2_3 fltng shaddow'>UML</div>
-                    <div class='cell_3 cell-3_3 bright'>Design</div>
-                </div>
-            </div>
-            <div class= "navrow" id="row-2">
-                <div class="navcol-1"></div>
-                <div class="navcol-2">
-                    <div class='cell_1 bright'>Implementation</div>
-                </div>
-            </div>
-            <div class= "navrow" id="row-3">
-                <div class="navcol-1">&bull; experienced</div>
-                <div class="navcol-2">
-                    <div class='cell_4 cell-1_4 small fltng dark'>C++<br/>1993 -</div>
-                    <div class='cell_4 cell-2_4 fltng shaddow'>Deplhi<br/>1997 -</div>
-                    <div class='cell_4 cell-3_4 fltng light'>Java<br/>2000 -</div>
-                    <div class='cell_4 cell-4_4 broad bright'>JavaScript<br/>2006 - now</div>
-                </div>
-            </div>
-            <div class= "navrow" id="row-4">
-                <div class="navcol-1">&bull; productive</div>
-                <div class="navcol-2">
-                    <div class='cell_4 cell-1_4 broad fltng shaddow'>linux</div>
-                    <div class='cell_4 cell-2_4 broad fltng light'>git</div>
-                    <div class='cell_4 cell-3_4 small fltng bright'>MagicDraw</div>
-                    <div class='cell_4 cell-4_4 dark'>PhpStorm</div>
-                </div>
-            </div>
-            <div class= "navrow" id="row-5">
-                <div class="navcol-1">&bull; innovative</div>
-                <div class="navcol-2">
-                    <div class='cell_1 light'>Node.JS &amp; Arduino</div>
-                </div>
-            </div>
-        </nav>
-    </div>
+<!-- HEADING -->
+<!-- MAINTOP -->
+<!-- TOPNAV -->
