--- a/partials/metanav.html
+++ b/partials/metanav.html
@@ -5,6 +5,7 @@
             <li><a href="/impressum">Kontakt</a></li>
             <li><a href="/impressum">Impressum</a></li>
             <li><a href="/disclaimer">Haftungsausschluss</a></li>
+            <li><a href="/about">about</a></li>
         </ul>
     </nav>
 </div>
