--- a/partials/top.html
+++ b/partials/top.html
@@ -12,8 +12,8 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="/ci/style/normalize">
-    <link rel="stylesheet" href="/ci/style/framlin">
+    <link rel="stylesheet" href="/ci/all/style/normalize">
+    <link rel="stylesheet" href="/ci/all/style/main">
     <script src="/lib/modernizr.js"></script>
 </head>
 <body>
