--- a/styles/framlin/main.css
+++ b/styles/framlin/main.css
@@ -1,2 +1,387 @@
-@import url("/ci/all/style/layout");
-@import url("/ci/all/style/look");
+/*++++++++++++++++++++ */
+/*===== LAYOUT ======= */
+/*++++++++++++++++++++ */
+.navrow {
+  width: 100%;
+  padding-bottom: 4px; }
+
+.navcol-1 {
+  float: left;
+  width: 24%; }
+
+.navcol-2 {
+  margin-left: 24%;
+  width: 76%; }
+
+.fltng {
+  float: left; }
+
+.cell_1 {
+  width: 100%; }
+
+.cell_3 {
+  width: 33%; }
+
+.cell_4 {
+  width: 25%; }
+
+.cell-2_3 {
+  width: 34%; }
+
+.cell-3_3 {
+  margin-left: 67%; }
+
+.cell-4_4 {
+  margin-left: 75%; }
+
+#row-1 {
+  padding-top: 4px; }
+
+#row-1 .cell-1_3 {
+  width: 47%; }
+
+#row-1 .cell-2_3 {
+  width: 20%; }
+
+#row-1 .cell-3_3 {
+  width: 33%; }
+
+#row-3 .cell-1_4 {
+  width: 20%; }
+
+#row-3 .cell-2_4 {
+  width: 15%; }
+
+#row-3 .cell-3_4 {
+  width: 30%; }
+
+#row-3 .cell-4_4 {
+  width: 35%;
+  margin-left: 65%; }
+
+/*++++++++++++++++++++ */
+/*===== STYLE ======== */
+/*++++++++++++++++++++ */
+#topnav {
+  background-color: #ffffee;
+  color: black;
+  font-size: 0.75em; }
+
+.navcol-1 {
+  color: rgba(68, 5, 68, 0.98);
+  font-family: TeXMono_Bold, monospace;
+  font-size: 1em; }
+
+.navcol-2 {
+  font-family: TeXMono_Bold, monospace;
+  text-align: center; }
+
+.dark {
+  background-color: rgba(149, 92, 0, 0.47);
+  color: #fff2d0; }
+
+a.dark {
+  color: #fff2d0;
+  font-weight: bold; }
+
+.shaddow {
+  color: white;
+  background-color: rgba(188, 122, 0, 0.47); }
+
+a.shaddow {
+  font-weight: bold;
+  color: white; }
+
+.light {
+  background-color: rgba(255, 204, 153, 0.49);
+  color: darkred; }
+
+a.light {
+  font-weight: bold;
+  color: darkred; }
+
+.bright {
+  background-color: rgba(255, 239, 191, 0.47);
+  color: darkred; }
+
+a.bright {
+  font-weight: bold;
+  color: darkred; }
+
+html {
+  overflow: scroll; }
+
+body {
+  padding-top: 5px; }
+
+/*====================== HEADING ============================ */
+#heading {
+  margin: 0 auto;
+  max-width: 31.9em;
+  padding: 5px 10px 5px 10px; }
+
+#logo {
+  float: left;
+  margin: 0; }
+
+#slogan {
+  margin-top: 5px; }
+  #slogan span {
+    display: block;
+    width: 100%; }
+
+#firma {
+  margin-bottom: 0.2em; }
+
+#contact {
+  margin-top: 1em; }
+
+/* ------  navigation -------- */
+#navigation {
+  margin-top: 5px;
+  width: 100%; }
+
+/*====================== MAIN ================================= */
+#main {
+  margin: 0 auto;
+  max-width: 33.2em;
+  padding: 0; }
+
+/*================ CONTENT ====================================== */
+#breadcrumb ul {
+  padding: 0px 0px 5px 5px; }
+
+#breadcrumb li {
+  display: inline;
+  margin-left: 0.5em; }
+
+.content > article > header {
+  text-align: center;
+  padding: 5px; }
+
+section {
+  margin-bottom: 1em; }
+  section header, section p, section footer {
+    padding: 5px; }
+    section header h1, section p h1, section footer h1 {
+      margin: 0; }
+  section footer .msg {
+    float: left;
+    width: 75%; }
+  section footer nav {
+    width: 25%;
+    margin-left: 75%; }
+  section footer a {
+    width: 100%; }
+
+/*================ customer-nav ================================== */
+#bottomnav {
+  width: 100%; }
+
+#bottomnav table {
+  width: 100%; }
+
+#bottomnav table, td, th {
+  margin: 0; }
+
+#bottomnav td, th {
+  padding: 2px 10px 2px 5px; }
+
+/*================ meta-nav ====================================== */
+#metanav ul {
+  padding: 0px 0px 5px 5px; }
+
+#metanav li {
+  display: inline;
+  margin-left: 1em; }
+
+.cv-kind ul, .cv-entry ul {
+  padding-left: 20px; }
+
+/* -------------- projects ---------------------------- */
+div.customers {
+  margin: 1em; }
+
+div.customer_project {
+  margin-left: 1em; }
+
+.customer_place {
+  display: inline; }
+
+.customer_description {
+  display: block;
+  padding-left: 2em; }
+
+.project_name {
+  margin-bottom: 0.1em; }
+
+p.project_skills {
+  margin-top: 0.2em;
+  margin-bottom: 0.1em; }
+
+p.project_endcustomer {
+  margin-top: 0.2em; }
+
+span.invisible {
+  display: none; }
+
+@font-face {
+  font-family: TeX;
+  src: url("/ci/font/TeX");
+  font-style: normal;
+  font-weight: normal; }
+
+@font-face {
+  font-family: TeX_Bold;
+  src: url("/ci/font/TeX_Bold");
+  font-style: normal;
+  font-weight: bold; }
+
+@font-face {
+  font-family: TeXMono;
+  src: url("/ci/font/TeXMono");
+  font-style: normal;
+  font-weight: normal; }
+
+@font-face {
+  font-family: TeXMono_Bold;
+  src: url("/ci/font/TeXMono_Bold");
+  font-style: normal;
+  font-weight: bold; }
+
+@font-face {
+  font-family: TeXSans;
+  src: url("/ci/font/TeXSans");
+  font-style: normal;
+  font-weight: normal; }
+
+@font-face {
+  font-family: TeXSans_Bold;
+  src: url("/ci/font/TeXSans_Bold");
+  font-style: normal;
+  font-weight: bold; }
+
+@font-face {
+  font-family: telegrame;
+  src: url("/ci/font/telegrame");
+  font-style: normal;
+  font-weight: normal; }
+
+/*++++++++++================+++++++++++++================ */
+html {
+  background-color: #fff26a; }
+
+body {
+  font-family: TeXSans; }
+
+ul {
+  list-style-image: url("/ci/image/bullet"); }
+
+/*========= SITE-HEADING ================ */
+#heading {
+  background-color: #ffffaa; }
+
+#slogan span {
+  font-size: 1em;
+  font-family: telegrame, monospace;
+  text-align: center; }
+
+#slogan #firma {
+  font-size: 1.1em; }
+
+#slogan #contact {
+  font-size: xx-small; }
+
+/*=== NAV === */
+#navigation {
+  border-bottom-color: #ffffaa;
+  /*border-bottom-color: #ffff99 */
+  border-bottom-style: solid;
+  border-bottom-width: 0.5em; }
+
+/*============ CONTENT ================== */
+#breadcrumb {
+  background-color: #ffee37; }
+
+#breadcrumb a, #breadcrumb a:visited {
+  background-color: #ffee37;
+  color: #521700;
+  font-size: small; }
+
+.content article section {
+  background-color: #fffde9; }
+
+.content > article > header {
+  text-align: center;
+  background-color: #ffee37; }
+
+article header {
+  background-color: white;
+  font-family: TeX_Mono, monospace; }
+
+section {
+  border-bottom-color: #ff8352;
+  border-bottom-style: solid;
+  border-bottom-width: 4px;
+  font-family: TeX, serif; }
+  section header {
+    border-color: #ff5e1f;
+    border-style: solid;
+    border-width: 2px 0 2px 0;
+    background-color: white;
+    font-size: 0.8em; }
+    section header h1 {
+      background-color: white;
+      font-size: 1.3em; }
+  section a {
+    color: #521700; }
+  section footer {
+    background-color: #ffffaa;
+    font-size: 0.7em;
+    font-family: TeXMono; }
+    section footer nav {
+      text-align: right; }
+
+section header a, section header a:visited {
+  color: #521700; }
+
+section.no-boddy {
+  border-bottom: 0; }
+
+/* -------------customer-nav -------------------------------------- */
+#bottomnav {
+  background-color: #ffffde; }
+  #bottomnav table {
+    background-color: #ffffde; }
+  #bottomnav nav {
+    background-color: #ffffde;
+    color: black; }
+    #bottomnav nav a {
+      color: #521700; }
+
+#bottomnav table, td, th {
+  border-style: none;
+  text-align: left;
+  font-size: small; }
+
+/* -------------meta-nav -------------------------------------- */
+#metanav, #metanav nav {
+  background-color: #ffee37; }
+
+#metanav nav a, #metanav nav a:visited {
+  background-color: #ffee37;
+  color: #521700;
+  font-size: small; }
+
+/* -------------- projects ---------------------------- */
+div.customers {
+  border-bottom-style: solid;
+  border-width: 0px 0px 1px 0px;
+  border-color: #ffcc99; }
+
+.customer_description {
+  font-size: 0.7em; }
+
+.project_name {
+  font-family: TeX_Bold;
+  font-weight: bold; }
