--- a/styles/runjs/main.css
+++ b/styles/runjs/main.css
@@ -1,5 +1,273 @@
-@import url("/ci/all/style/layout");
-@import url("/ci/runjs/style/layout");
+/*@import url("/ci/all/style/main") */
+html {
+  overflow: scroll; }
 
-@import url("/ci/all/style/look");
-@import url("/ci/runjs/style/look");
+body {
+  padding-top: 5px; }
+
+/*====================== HEADING ============================ */
+#heading {
+  margin: 0 auto;
+  max-width: 31.9em;
+  padding: 5px 10px 5px 10px; }
+
+#logo {
+  float: left;
+  margin: 0; }
+
+#slogan {
+  margin-top: 5px; }
+  #slogan span {
+    display: block;
+    width: 100%; }
+
+#firma {
+  margin-bottom: 0.2em; }
+
+#contact {
+  margin-top: 1em; }
+
+/* ------  navigation -------- */
+#navigation {
+  margin-top: 5px;
+  width: 100%; }
+
+/*====================== MAIN ================================= */
+#main {
+  margin: 0 auto;
+  max-width: 33.2em;
+  padding: 0; }
+
+/*================ CONTENT ====================================== */
+#breadcrumb ul {
+  padding: 0px 0px 5px 5px; }
+
+#breadcrumb li {
+  display: inline;
+  margin-left: 0.5em; }
+
+.content > article > header {
+  text-align: center;
+  padding: 5px; }
+
+section {
+  margin-bottom: 1em; }
+  section header, section p, section footer {
+    padding: 5px; }
+    section header h1, section p h1, section footer h1 {
+      margin: 0; }
+  section footer .msg {
+    float: left;
+    width: 75%; }
+  section footer nav {
+    width: 25%;
+    margin-left: 75%; }
+  section footer a {
+    width: 100%; }
+
+/*================ customer-nav ================================== */
+#bottomnav {
+  width: 100%; }
+
+#bottomnav table {
+  width: 100%; }
+
+#bottomnav table, td, th {
+  margin: 0; }
+
+#bottomnav td, th {
+  padding: 2px 10px 2px 5px; }
+
+/*================ meta-nav ====================================== */
+#metanav ul {
+  padding: 0px 0px 5px 5px; }
+
+#metanav li {
+  display: inline;
+  margin-left: 1em; }
+
+.cv-kind ul, .cv-entry ul {
+  padding-left: 20px; }
+
+/*$main-max-width: 33.2em */
+/* HEADING */
+#product {
+  margin-top: 0.2em; }
+
+#firma {
+  margin-top: 1.4em; }
+
+#navigation {
+  visibility: collapse;
+  margin: 0; }
+
+#main {
+  max-width: 33.2em; }
+
+article > header {
+  margin-bottom: 1em; }
+
+@font-face {
+  font-family: TeX;
+  src: url("/ci/font/TeX");
+  font-style: normal;
+  font-weight: normal; }
+
+@font-face {
+  font-family: TeX_Bold;
+  src: url("/ci/font/TeX_Bold");
+  font-style: normal;
+  font-weight: bold; }
+
+@font-face {
+  font-family: TeXMono;
+  src: url("/ci/font/TeXMono");
+  font-style: normal;
+  font-weight: normal; }
+
+@font-face {
+  font-family: TeXMono_Bold;
+  src: url("/ci/font/TeXMono_Bold");
+  font-style: normal;
+  font-weight: bold; }
+
+@font-face {
+  font-family: TeXSans;
+  src: url("/ci/font/TeXSans");
+  font-style: normal;
+  font-weight: normal; }
+
+@font-face {
+  font-family: TeXSans_Bold;
+  src: url("/ci/font/TeXSans_Bold");
+  font-style: normal;
+  font-weight: bold; }
+
+@font-face {
+  font-family: telegrame;
+  src: url("/ci/font/telegrame");
+  font-style: normal;
+  font-weight: normal; }
+
+/*++++++++++================+++++++++++++================ */
+html {
+  background-color: #fff26a; }
+
+body {
+  font-family: TeXSans; }
+
+ul {
+  list-style-image: url("/ci/image/bullet"); }
+
+/*========= SITE-HEADING ================ */
+#heading {
+  background-color: #ffffaa; }
+
+#slogan span {
+  font-size: 1em;
+  font-family: telegrame, monospace;
+  text-align: center; }
+
+#slogan #firma {
+  font-size: 1.1em; }
+
+#slogan #contact {
+  font-size: xx-small; }
+
+/*=== NAV === */
+#navigation {
+  border-bottom-color: #ffffaa;
+  /*border-bottom-color: #ffff99 */
+  border-bottom-style: solid;
+  border-bottom-width: 0.5em; }
+
+/*============ CONTENT ================== */
+#breadcrumb {
+  background-color: #ffee37; }
+
+#breadcrumb a, #breadcrumb a:visited {
+  background-color: #ffee37;
+  color: #521700;
+  font-size: small; }
+
+.content article section {
+  background-color: #fffde9; }
+
+.content > article > header {
+  text-align: center;
+  background-color: #ffee37; }
+
+article header {
+  background-color: white;
+  font-family: TeX_Mono, monospace; }
+
+section {
+  border-bottom-color: #ff8352;
+  border-bottom-style: solid;
+  border-bottom-width: 4px;
+  font-family: TeX, serif; }
+  section header {
+    border-color: #ff5e1f;
+    border-style: solid;
+    border-width: 2px 0 2px 0;
+    background-color: white;
+    font-size: 0.8em; }
+    section header h1 {
+      background-color: white;
+      font-size: 1.3em; }
+  section a {
+    color: #521700; }
+  section footer {
+    background-color: #ffffaa;
+    font-size: 0.7em;
+    font-family: TeXMono; }
+    section footer nav {
+      text-align: right; }
+
+section header a, section header a:visited {
+  color: #521700; }
+
+section.no-boddy {
+  border-bottom: 0; }
+
+/* -------------customer-nav -------------------------------------- */
+#bottomnav {
+  background-color: #ffffde; }
+  #bottomnav table {
+    background-color: #ffffde; }
+  #bottomnav nav {
+    background-color: #ffffde;
+    color: black; }
+    #bottomnav nav a {
+      color: #521700; }
+
+#bottomnav table, td, th {
+  border-style: none;
+  text-align: left;
+  font-size: small; }
+
+/* -------------meta-nav -------------------------------------- */
+#metanav, #metanav nav {
+  background-color: #ffee37; }
+
+#metanav nav a, #metanav nav a:visited {
+  background-color: #ffee37;
+  color: #521700;
+  font-size: small; }
+
+html {
+  background-color: #fff60a; }
+
+#navigation {
+  border: 0; }
+
+.content article section {
+  background-color: #fffdbd; }
+
+article header {
+  background-color: #fffdd6; }
+
+section header {
+  background-color: #fffdd6; }
+  section header h1 {
+    background-color: #fffdd6; }
