--- a/partials/topnav.html
+++ b/partials/topnav.html
@@ -35,7 +35,7 @@
         <div class= "navrow" id="row-5">
             <div class="navcol-1">&bull; innovative</div>
             <div class="navcol-2">
-                <div class='cell_1 light'>Node.JS &amp; Arduino</div>
+                <div class='cell_1 light'>Node.JS &amp; Espruino</div>
             </div>
         </div>
     </nav>
