--- a/styles/all/_look.sass
+++ b/styles/all/_look.sass
@@ -56,11 +56,12 @@ ul
 
 /*============ CONTENT ==================*/
 #breadcrumb
-  background-color: $dark-text-color
+  background-color: $ci-bottomnav
+  font-size: small
 
 
 #breadcrumb a, #breadcrumb a:visited
-  background-color: $dark-text-color
+  //background-color: $dark-text-color
   color: $link-color
   font-size: small
 
@@ -105,6 +106,10 @@ section
 
     nav
       text-align: right
+
+  h2
+    padding: $section-padding
+    font-size: 1.2em
 
 section header a, section header a:visited
   color: $link-color
