--- a/styles/egger/main.css
+++ b/styles/egger/main.css
@@ -199,32 +199,13 @@ section {
   display: inline;
   margin-left: 1em; }
 
-/* -------------- projects ---------------------------- */
-div.customers {
-  margin: 1em; }
+.cv-kind ul, .cv-entry ul {
+  padding-left: 20px; }
 
-div.customer_project {
-  margin-left: 1em; }
-
-.customer_place {
-  display: inline; }
-
-.customer_description {
-  display: block;
-  padding-left: 2em; }
-
-.project_name {
-  margin-bottom: 0.1em; }
-
-p.project_skills {
-  margin-top: 0.2em;
-  margin-bottom: 0.1em; }
-
-p.project_endcustomer {
-  margin-top: 0.2em; }
-
-span.invisible {
-  display: none; }
+.properties {
+  padding: 5px; }
+  .properties h3 {
+    margin: 0.2em; }
 
 @font-face {
   font-family: TeX;
@@ -377,15 +358,20 @@ section.no-boddy {
   color: #521700;
   font-size: small; }
 
-/* -------------- projects ------------------------- */
-div.customers {
-  border-bottom-style: solid;
-  border-width: 0px 0px 1px 0px;
-  border-color: #ffcc99; }
+section {
+  background-color: white; }
 
-.customer_description {
-  font-size: 0.7em; }
+.skills {
+  font-family: TeXMono; }
 
-.project_name {
-  font-family: TeX_Bold;
-  font-weight: bold; }
+.cv-label {
+  color: maroon;
+  font-family: TeXSans;
+  font-size: small; }
+
+.cv-customer {
+  font-size: small; }
+
+.properties {
+  padding: 5px;
+  background-color: #ffffde; }
