context-colum and context-menu layout for runjs

--- a/styles/all/_look.sass
+++ b/styles/all/_look.sass
@@ -4,7 +4,7 @@ $ci-background : #fff26a
 $ci-schmuckfarbe: #ff5e1f
 $ci-heading:#ffa
 $ci-bottomnav: #ffffde
-
+$ci-text: black
 
 $text-color: lighten($ci-background, 25)
 $hi-text-color: lighten($ci-background, 40)
