--- a/styles/runjs/_layout.sass
+++ b/styles/runjs/_layout.sass
@@ -64,16 +64,23 @@ article > header
   font-size: 0px
 
 section
+  p, ul, table
+    margin: .5em 3em
   pre
-    padding: 5px
-
+    margin: 0.5em 4em
+  h2
+    padding-left: 2em
+    padding-bottom: 0px
+  z-index: 2
+  position: relative
+  padding-bottom: 1em
 
 #sec-navigation
   position: fixed
   top: 10em
   left: 10px
-  z-index: -10
   margin: 0px
+
 
 #section-navigation ul
   list-style: none
@@ -102,3 +109,6 @@ section
       padding-left: $section-padding
 
 
+.banner
+  z-index: 2
+  position: relative
