--- a/styles/runjs/main.css
+++ b/styles/runjs/main.css
@@ -58,6 +58,8 @@ section {
     padding: 5px; }
   section p, section h1, section h2 {
     margin: 0.25em 0px; }
+  section h2 {
+    padding: 5px; }
   section footer .msg {
     float: left;
     width: 75%; }
@@ -126,14 +128,22 @@ article > header {
   clear: both;
   font-size: 0px; }
 
-section pre {
-  padding: 5px; }
+section {
+  z-index: 2;
+  position: relative;
+  padding-bottom: 1em; }
+  section p, section ul, section table {
+    margin: 0.5em 3em; }
+  section pre {
+    margin: 0.5em 4em; }
+  section h2 {
+    padding-left: 2em;
+    padding-bottom: 0px; }
 
 #sec-navigation {
   position: fixed;
   top: 10em;
   left: 10px;
-  z-index: -10;
   margin: 0px; }
 
 #section-navigation ul {
@@ -156,6 +166,10 @@ section pre {
   #section-context header h1 {
     margin: 0.25em 0px;
     padding-left: 5px; }
+
+.banner {
+  z-index: 2;
+  position: relative; }
 
 @font-face {
   font-family: TeX;
@@ -274,7 +288,6 @@ section {
     section footer nav {
       text-align: right; }
   section h2 {
-    padding: 5px;
     font-size: 1.2em; }
 
 section header a, section header a:visited {
@@ -329,7 +342,18 @@ article header {
 section header {
   background-color: white; }
   section header h1 {
-    background-color: white; }
+    background-color: white;
+    padding-left: 2em; }
+section pre {
+  background-color: #fffbd0;
+  font-family: TeX_Mono, monospace;
+  font-size: small;
+  padding: 5px; }
+section .extended {
+  display: none; }
+
+section:hover {
+  cursor: pointer; }
 
 .content article.right-column section {
   background-color: #fffbd0; }
@@ -344,19 +368,10 @@ section header {
   text-align: center;
   font-family: TeX_Mono, monospace; }
 
-section pre {
-  background-color: #fffbd0;
-  font-family: TeX_Mono, monospace;
-  font-size: small;
-  margin: 5px; }
-
 .content article .master-section {
   background-color: white; }
   .content article .master-section header h1 {
     color: #ff5e1f; }
-
-section .section-context {
-  display: none; }
 
 #sec-navigation {
   background-color: #fffbd0;
@@ -365,6 +380,7 @@ section .section-context {
   border-top-color: #ff8352; }
 
 #section-context {
+  display: none;
   font-size: small;
   background-color: #fffbd0; }
   #section-context header {
@@ -380,8 +396,23 @@ section .section-context {
     font-family: TeX_Mono, monospace;
     color: black; }
 
+#section-context.extended {
+  display: block; }
+
 #section-navigation .visible-section {
   background-color: white; }
 #section-navigation .master-section {
   color: #ff5e1f;
   background-color: white; }
+#section-navigation li:hover {
+  cursor: pointer; }
+
+#cc3000-connection-pinout {
+  font-family: TeX_Mono, monospace; }
+  #cc3000-connection-pinout td:first-child {
+    width: 10em; }
+  #cc3000-connection-pinout tr:nth-child(even) {
+    background-color: #fffbd0; }
+  #cc3000-connection-pinout th {
+    border-bottom-style: solid;
+    border-bottom-width: 2px; }
