--- a/partials/topnav.html
+++ b/partials/topnav.html
@@ -1,42 +1,44 @@
-<div id='navigation'>
-    <nav id='topnav'>
-        <div class= "navrow" id="row-1">
-            <div class="navcol-1">&bull; competent</div>
-            <div class="navcol-2">
-                <div class='cell_3 cell-1_3 fltng bright'>Analysis</div>
-                <div class='cell_3 cell-2_3 fltng shaddow'>UML</div>
-                <div class='cell_3 cell-3_3 bright'>Design</div>
-            </div>
+<div  class="overlay" >
+    <div id='navigation'>
+            <nav id='topnav' class="vbox fill-horizontal">
+                <div class="navrow hbox fill-horizontal" id="row-1">
+                    <div class="navcol-1">&bull; competent</div>
+                    <div class="navcol-2 hbox flex-1">
+                        <div class='flex-1 bright'>Analysis</div>
+                        <div class='flex-1 shaddow'>UML</div>
+                        <div class='flex-1 bright'>Design</div>
+                    </div>
+                </div>
+                <div class="navrow hbox" id="row-2">
+                    <div class="navcol-1"></div>
+                    <div class="navcol-2 hbox flex-1">
+                        <div class='flex-1 bright'>Implementation</div>
+                    </div>
+                </div>
+                <div class="navrow hbox" id="row-3">
+                    <div class="navcol-1">&bull; experienced</div>
+                    <div class="navcol-2 hbox flex-1">
+                        <div class='flex-1 dark'>C++<br/>1993 -</div>
+                        <div class='flex-1 shaddow'>Deplhi<br/>1997 -</div>
+                        <div class='flex-2 light'>Java<br/>2000 -</div>
+                        <div class='flex-3 bright'>JavaScript<br/>2006 - now</div>
+                    </div>
+                </div>
+                <div class="navrow hbox" id="row-4">
+                    <div class="navcol-1">&bull; productive</div>
+                    <div class="navcol-2 hbox flex-1">
+                        <div class='flex-1 shaddow'>linux</div>
+                        <div class='flex-1 light'>git</div>
+                        <div class='flex-1 bright'>MagicDraw</div>
+                        <div class='flex-1 dark'>PhpStorm</div>
+                    </div>
+                </div>
+                <div class="navrow hbox" id="row-5">
+                    <div class="navcol-1">&bull; innovative</div>
+                    <div class="navcol-2 hbox flex-1">
+                        <div class='flex-1 light'>Node.JS &amp; Espruino</div>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <div class= "navrow" id="row-2">
-            <div class="navcol-1"></div>
-            <div class="navcol-2">
-                <div class='cell_1 bright'>Implementation</div>
-            </div>
-        </div>
-        <div class= "navrow" id="row-3">
-            <div class="navcol-1">&bull; experienced</div>
-            <div class="navcol-2">
-                <div class='cell_4 cell-1_4 small fltng dark'>C++<br/>1993 -</div>
-                <div class='cell_4 cell-2_4 fltng shaddow'>Deplhi<br/>1997 -</div>
-                <div class='cell_4 cell-3_4 fltng light'>Java<br/>2000 -</div>
-                <div class='cell_4 cell-4_4 broad bright'>JavaScript<br/>2006 - now</div>
-            </div>
-        </div>
-        <div class= "navrow" id="row-4">
-            <div class="navcol-1">&bull; productive</div>
-            <div class="navcol-2">
-                <div class='cell_4 cell-1_4 broad fltng shaddow'>linux</div>
-                <div class='cell_4 cell-2_4 broad fltng light'>git</div>
-                <div class='cell_4 cell-3_4 small fltng bright'>MagicDraw</div>
-                <div class='cell_4 cell-4_4 dark'>PhpStorm</div>
-            </div>
-        </div>
-        <div class= "navrow" id="row-5">
-            <div class="navcol-1">&bull; innovative</div>
-            <div class="navcol-2">
-                <div class='cell_1 light'>Node.JS &amp; Espruino</div>
-            </div>
-        </div>
-    </nav>
 </div>
