compute host/ip use service-type for urls

--- a/partials/header.html
+++ b/partials/header.html
@@ -3,7 +3,7 @@
 
         <header id='heading' class="hbox">
                 <nav>
-                    <a id='home' href="/"><img id='logo' src='http://localhost:8088/images/logo.png' /></a>
+                    <a id='home' href="/"><img id='logo' src='ci::/images/logo.png' /></a>
                 </nav>
                 <div id='slogan' class="vbox">
                     <div id="firma">SoftWareEngineering Wolfgang&nbsp;Egger</div>
