reorganize and improve styles

--- a/partials/topnav.html
+++ b/partials/topnav.html
@@ -1,6 +1,6 @@
 <div  class="overlay" >
-    <div id='navigation'>
-            <nav id='topnav' class="vbox fill-horizontal">
+    <div id='topnav'>
+            <nav id='navigation' class="vbox fill-horizontal">
                 <div class="navrow hbox fill-horizontal" id="row-1">
                     <div class="navcol-1">&bull; competent</div>
                     <div class="navcol-2 hbox flex-1">
