--- a/styles/all/ci.css
+++ b/styles/all/ci.css
@@ -1,5 +1,10 @@
 @import 'reset.css';
-@import 'colors.css';
-@import 'fonts.css';
 @import 'flexbox.css';
+@import 'design.css';
+@import 'layout.css';
 @import 'header.css';
+@import 'breadcrumb.css';
+@import 'topnav.css';
+@import 'main.css';
+@import 'bottomnav.css';
+@import 'metanav.css';
