--- a/partials/topnav.html
+++ b/partials/topnav.html
@@ -36,7 +36,7 @@
                 <div class="navrow hbox" id="row-5">
                     <div class="navcol-1">&bull; innovative</div>
                     <div class="navcol-2 hbox flex-1">
-                        <div class='flex-1 light'>Node.JS &amp; Espruino</div>
+                        <div class='flex-1 light'>3D-Printing, Electronics, IoT</div>
                     </div>
                 </div>
             </nav>
