--- a/styles/all/colors.css
+++ b/styles/all/colors.css
@@ -6,6 +6,7 @@
     /*--color-warm-yellow:   #ffee37;*/
 
     --color-dark-orange:   #ff5f00; /* rgba(255, 95, 0, 1)    -- hsla(22, 100%, 50%, 1) */
+    --color-darker-orange: #cb6300; /* rgba(255, 95, 0, 1)    -- hsla(22, 100%, 50%, 1) */
     --color-light-orange:  #ee7f3d; /* rgba(238, 127, 61, 1)  -- hsla(22, 84%, 59%, 1) */
 
 
