--- a/styles/all/metanav.css
+++ b/styles/all/metanav.css
@@ -1,5 +1,16 @@
+#footer {
+    margin-top: 0px;
+    padding-top: 0px;
+}
+
+#metanv {
+    box-shadow: var(--box-shadow);
+}
+
 #metanav, #metanav nav {
     background-color: var(--hilight-bg-color);
+    border-bottom-right-radius: var(--box-radius);
+    border-bottom-left-radius: var(--box-radius);
 }
 
 #metanav nav a, #metanav nav a:visited {
@@ -10,6 +21,10 @@
 
 #metanav ul {
     padding: 0px 0px 5px 5px;
+    margin-top: 0.2em;
+    box-shadow: var(--box-shadow);
+    border-bottom-right-radius: var(--box-radius);
+    border-bottom-left-radius: var(--box-radius);
 }
 
 #metanav li {
