improve haeder style adapt footer-pages

--- a/partials/header.html
+++ b/partials/header.html
@@ -5,7 +5,7 @@
                 <nav>
                     <a id='home' href="/"><img id='logo' src='ci::/images/logo.png' /></a>
                 </nav>
-                <div id='slogan' class="vbox">
+                <div id='slogan' class="vbox flex-1">
                     <div id="firma">SoftWareEngineering Wolfgang&nbsp;Egger</div>
                     <div id="product">Custom Software</div>
                     <div id='contact'>
