--- a/partials/topnav.html
+++ b/partials/topnav.html
@@ -2,7 +2,7 @@
     <div id='topnav'>
             <nav id='navigation' class="vbox fill-horizontal">
                 <div class="navrow hbox fill-horizontal" id="row-1">
-                    <div class="navcol-1">&bull; competent</div>
+                    <div class="navcol-1">&gt; competent</div>
                     <div class="navcol-2 hbox flex-1">
                         <div class='flex-1 bright'>Analysis</div>
                         <div class='flex-1 shaddow'>UML</div>
@@ -16,7 +16,7 @@
                     </div>
                 </div>
                 <div class="navrow hbox" id="row-3">
-                    <div class="navcol-1">&bull; experienced</div>
+                    <div class="navcol-1">&gt; experienced</div>
                     <div class="navcol-2 hbox flex-1">
                         <div class='flex-1 dark'>C++<br/>1993 -</div>
                         <div class='flex-1 shaddow'>Deplhi<br/>1997 -</div>
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="navrow hbox" id="row-4">
-                    <div class="navcol-1">&bull; productive</div>
+                    <div class="navcol-1">&gt; productive</div>
                     <div class="navcol-2 hbox flex-1">
                         <div class='flex-1 shaddow'>linux</div>
                         <div class='flex-1 light'>git</div>
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="navrow hbox" id="row-5">
-                    <div class="navcol-1">&bull; innovative</div>
+                    <div class="navcol-1">&gt; innovative</div>
                     <div class="navcol-2 hbox flex-1">
                         <div class='flex-1 light'>3D-Printing, Electronics, IoT</div>
                     </div>
