--- a/partials/footer.html
+++ b/partials/footer.html
@@ -5,10 +5,9 @@
                 <nav>
                     <ul>
                         <li><a href="/">Startseite</a></li>
-                        <li><a href="/impressum">Kontakt</a></li>
-                        <li><a href="/impressum">Impressum</a></li>
-                        <li><a href="/disclaimer">Haftungsausschluss</a></li>
-                        <li><a href="/about">about</a></li>
+                        <li><a href="/impressum.html">Impressum</a></li>
+                        <li><a href="/disclaimer.html">Haftungsausschluss</a></li>
+                        <li><a href="/dsgv.html">Datenschutz</a></li>
                     </ul>
                 </nav>
             </div>
