--- a/styles/all/topnav.css
+++ b/styles/all/topnav.css
@@ -12,6 +12,10 @@
 
 #navigation {
     width: 100%;
+    background-color: #ffe;
+    border-bottom-right-radius: var(--box-radius);
+    border-bottom-left-radius: var(--box-radius);
+    box-shadow: var(--box-shadow);
 }
 
 .navrow {
@@ -20,8 +24,9 @@
 }
 
 .navcol-1 {
-    width: 9em;
+    width: 8em;
     padding-left: 0.5em;
+    padding-right: 1em;
 
     color: rgba(68, 5, 68, 0.98);
     font-family: TeXMono_Bold, monospace;
