--- a/styles/all/main.css
+++ b/styles/all/main.css
@@ -1,5 +1,20 @@
+@keyframes slidein {
+    from {
+        opacity: 0;
+    }
+    to {
+       opacity: 1;
+    }
+}
 #main {
     margin: 0 auto;
     max-width: var(--content-width);
     padding: 0;
+
+}
+
+
+.page{
+    animation-duration: 2s;
+    animation-name: slidein;
 }
